--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -6,6 +6,12 @@ nav ul li .nav-icons{
     width: 35px;
     height: inherit;
     margin: 0 10px;
+    transition: 0.25s ease;
+}
+
+.nav-icons:hover{
+    transform: translateY(-2px);
+    transition: 0.5s ease;
 }
 
 @media screen and (max-width: 759px){
