--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,10 @@ code {
     monospace;
 }
 
+textarea{
+  height: auto !important;
+}
+
 ::-webkit-scrollbar-track
 {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
