--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -18,6 +18,7 @@ nav ul li .nav-icons{
     .detach-nav{
         position: fixed;
         bottom: 0;
+        left: 0;
         padding: 10px;
         background-color: var(--bg-color);
     }
