--- a/src/components/NewPost/card.css
+++ b/src/components/NewPost/card.css
@@ -1,7 +1,21 @@
-.header-icons > a{
+.header-icons>a {
     transition: all 0.3s ease-in-out;
 }
 
-.header-icons > a:hover{
+.header-icons>a:hover {
     transform: translateY(-2px);
+}
+
+.offcanvas, .glassmorphism {
+    background: rgba(255, 255, 255, 0.1);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.16);
+}
+
+.offcanvas{
+    border-radius: 0px;
+    border-top-right-radius: 10px;
 }
