--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,7 +1,18 @@
 .home-platform-img{
     transition: 0.5s ease;
+    aspect-ratio: 16/9;
+    width: 300px;
+    height: 200px;
 }
+
+
 
 .home-platform-img:hover{
     transform: scale(1.05);
+}
+
+.home-carousel-img{
+    aspect-ratio: 16/9;
+    width: 1200px;
+    max-height: 544px;
 }
