--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -25,6 +25,7 @@ nav ul li .nav-icons{
         bottom: 0;
         left: 0;
         padding: 10px;
+        z-index: 999;
         background-color: var(--bg-color);
     }
 }
